fix: z-index in header

--- a/src/app/core/components/header/header.component.scss
+++ b/src/app/core/components/header/header.component.scss
@@ -4,9 +4,9 @@
   .header {
     position: fixed;
     top: 0;
-    z-index: 999px;
     width: 100%;
     height: $header-height;
+    z-index: 1000;
     transition: all 0.2s;
   }
   .menu {
@@ -17,7 +17,6 @@
     color: $color-white;
     &.active {
       background-color: $color-neutral-75;
-      z-index: 999;
     }
   }
   .header.booking {
